Add: img buttons to CPU side + CSS

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,3 +16,10 @@ body {
     margin-left: 2px !important;
     margin-right: 2px !important;
 }
+
+.CPU-btn img {
+    max-width: 100% auto;
+    height: 200px;
+    margin-left: 2px !important;
+    margin-right: 2px !important;
+}
