--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,7 +11,6 @@ body {
 background-color: #A66500;
 }
 
-
 .move-choice-btn img,
 .CPU-btn img {
     width: 80px;
@@ -25,19 +24,36 @@ background-color: #A66500;
         height: 250px;
         padding-top: 0.5rem;
     }
+
     .move-choice-btn img,
     .CPU-btn img {
         width: 48px;
         height: 48px;
     }
+
     .p-3 {
         padding: 1rem !important;
     }
+
     h2 {
         font-size: 1.2rem;
     }
+
     p {
         font-size: 1rem;
+    }
+
+    #startBtn, #stopBtn, #difficultyBtn, #bestOfBtn, #howToPlayBtn {
+        font-size: 1rem;
+        padding: 0.5rem 0.75rem;
+        width: 100%;
+        margin-bottom: 0.5rem;
+    }
+
+    .container .row.align-items-center > div {
+        flex-direction: column !important;
+        align-items: stretch !important;
+        justify-content: center !important;
     }
 }
 
@@ -47,19 +63,45 @@ background-color: #A66500;
         height: 350px;
         padding-top: 0.75rem;
     }
+
     .move-choice-btn img,
     .CPU-btn img {
         width: 64px;
         height: 64px;
     }
+
     .p-3 {
         padding: 1.5rem !important;
     }
+
     h2 {
         font-size: 1.5rem;
     }
+
     p {
         font-size: 1.1rem;
+    }
+}
+
+@media (min-width: 1024px) and (max-width: 1200px) {
+    .headerImage {
+        max-width: 100vw;
+        height: 400px;
+        padding-top: 1rem;
+    }
+        .move-choice-btn img,
+    .CPU-btn img {
+        width: 92px;
+        height: 92px;
+    }
+    .p-3 {
+        padding: 1.75rem !important;
+    }
+    h2 {
+        font-size: 1.75rem;
+    }
+    p {
+        font-size: 1.175rem;
     }
 }
 
