--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,23 @@
+@import url('https://fonts.googleapis.com/css2?family=Fredericka+the+Great&family=Rye&family=Sancreek&display=swap');
+
+:root {
+    --primary-font: 'Rye', cursive;
+    --secondary-font: 'Sancreek', cursive;
+    --tertiary-font: 'Fredericka the Great', cursive;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    font-family: var(--primary-font);
+}
+
+nav, .navbar, .navigation, button, .btn, .sub-header, h4, h5, h6, p {
+    font-family: var(--secondary-font);
+}
+
+.accent, .accent-text {
+    font-family: var(--tertiary-font);
+}
+
 .headerImage {
     max-width: 100vw;
     padding-top: 1rem;
