--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -48,33 +48,15 @@ background-color: #A66500;
     background-color: #7f634b;
 }
 
-.move-choice-btn img,
-.CPU-btn img {
-    width: 80px;
-    height: 80px;
-    margin: 2px !important;
+#bestOfModal .modal-content {
+    background-color: #7f634b;
 }
 
-@media (max-width: 768px) {
-    .headerImage {
-        max-width: 100vw;
-        height: 250px;
-        padding-top: 0.5rem;
-    }
-
-    .move-choice-btn img,
-    .CPU-btn img {
-        width: 48px;
-        height: 48px;
-    }
-
-    h2 {
-        font-size: 1.2rem;
-    }
-
-    p {
-        font-size: 1rem;
-    }
+.move-choice-btn img,
+.CPU-btn img {
+    width: 140px;
+    height: 140px;
+    margin: 2px !important;
 }
 
 .wanted-label {
@@ -127,18 +109,58 @@ background-color: #A66500;
     text-stroke: 1px #000;
 } */
 
-@media (min-width: 769px) and (max-width: 1024px) {
+@media (max-width: 768px) {
+    .headerImage {
+        max-width: 100vw;
+        height: 250px;
+        padding-top: 0.5rem;
+    }
+
+    h2 {
+        font-size: 1.2rem;
+    }
+
+    p {
+        font-size: 1rem;
+    }
+}
+
+@media (width: 768px) {
+        .headerImage {
+        max-width: 100vw;
+        height: 250px;
+        padding-top: 0.5rem;
+    }
+
+.move-choice-btn img,
+.CPU-btn img {
+    width: 85px;
+    height: 85px;
+    margin: 2px !important;
+}
+
+    h2 {
+        font-size: 1.2rem;
+    }
+
+    p {
+        font-size: 1rem;
+    }
+}
+
+@media (min-width: 769px) and (max-width: 1023px) {
     .headerImage {
         max-width: 100vw;
         height: 350px;
         padding-top: 0.75rem;
     }
 
-    .move-choice-btn img,
-    .CPU-btn img {
-        width: 64px;
-        height: 64px;
-    }
+.move-choice-btn img,
+.CPU-btn img {
+    width: 85px;
+    height: 85px;
+    margin: 2px !important;
+}
 
     .p-3 {
         padding: 1.5rem !important;
@@ -159,17 +181,22 @@ background-color: #A66500;
         height: 400px;
         padding-top: 1rem;
     }
-        .move-choice-btn img,
-    .CPU-btn img {
-        width: 92px;
-        height: 92px;
-    }
+
+.move-choice-btn img,
+.CPU-btn img {
+    width: 120px;
+    height: 120px;
+    margin: 2px !important;
+}
+
     .p-3 {
         padding: 1.75rem !important;
     }
+
     h2 {
         font-size: 1.75rem;
     }
+
     p {
         font-size: 1.175rem;
     }
@@ -181,17 +208,15 @@ background-color: #A66500;
         height: 450px;
         padding-top: 2rem;
     }
-    .move-choice-btn img,
-    .CPU-btn img {
-        width: 120px;
-        height: 120px;
-    }
+
     .p-3 {
         padding: 2rem !important;
     }
+
     h2 {
         font-size: 2rem;
     }
+
     p {
         font-size: 1.25rem;
     }
