--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,6 +35,14 @@ body {
 background-color: #A66500;
 }
 
+.howToPlayBtn {
+    object-fit: contain;
+    margin-right: 8px;
+    width: 80px;
+    height: auto;
+    display:block;
+}
+
 .how-to-img {
     max-width: 100%;
     height: 350px;
