--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,11 +36,28 @@ background-color: #A66500;
 }
 
 .howToPlayBtn {
-    object-fit: contain;
-    margin-right: 8px;
-    width: 80px;
-    height: auto;
     display:block;
+    background:transparent;
+    position: relative;
+}
+
+.howToPlayImg {
+    object-fit: contain;
+    width: 225px;
+    height: 100px;
+}
+
+.howToPlayText {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -60%);
+    width: 100%;
+    text-align: center;
+    color: #fff;
+    font-weight: bold;
+    z-index: 2;
+    pointer-events: none;
 }
 
 .how-to-img {
@@ -127,115 +144,97 @@ canvas {
     text-stroke: 1px #000;
 } */
 
-@media (max-width: 768px) {
+/* Extra small devices (portrait phones, less than 576px) */
+@media (max-width: 575.98px) {
     .headerImage {
-        max-width: 100vw;
+        height: 120px;
+        padding-top: 0.25rem;
+    }
+    .howToPlayImg {
+        width: 120px;
+        height: 50px;
+    }
+    .move-choice-btn img,
+    .CPU-btn img {
+        width: 60px;
+        height: 60px;
+    }
+    h2 { font-size: 1rem; }
+    p { font-size: 0.9rem; }
+}
+
+/* Small devices (landscape phones, 576px and up) */
+@media (min-width: 576px) and (max-width: 767.98px) {
+    .headerImage {
+        height: 180px;
+        padding-top: 0.4rem;
+    }
+    .howToPlayImg {
+        width: 150px;
+        height: 70px;
+    }
+    .move-choice-btn img,
+    .CPU-btn img {
+        width: 75px;
+        height: 75px;
+    }
+    h2 { font-size: 1.1rem; }
+    p { font-size: 1rem; }
+}
+
+/* Medium devices (tablets, 768px and up) */
+@media (min-width: 768px) and (max-width: 991.98px) {
+    .headerImage {
         height: 250px;
         padding-top: 0.5rem;
     }
-
-    h2 {
-        font-size: 1.2rem;
+    .howToPlayImg {
+        width: 180px;
+        height: 80px;
     }
-
-    p {
-        font-size: 1rem;
+    .move-choice-btn img,
+    .CPU-btn img {
+        width: 85px;
+        height: 85px;
     }
+    h2 { font-size: 1.2rem; }
+    p { font-size: 1rem; }
 }
 
-@media (width: 768px) {
-        .headerImage {
-        max-width: 100vw;
-        height: 250px;
-        padding-top: 0.5rem;
-    }
-
-.move-choice-btn img,
-.CPU-btn img {
-    width: 85px;
-    height: 85px;
-    margin: 2px !important;
-}
-
-    h2 {
-        font-size: 1.2rem;
-    }
-
-    p {
-        font-size: 1rem;
-    }
-}
-
-@media (min-width: 769px) and (max-width: 1023px) {
+/* Large devices (desktops, 992px and up) */
+@media (min-width: 992px) and (max-width: 1199.98px) {
     .headerImage {
-        max-width: 100vw;
         height: 350px;
         padding-top: 0.75rem;
     }
-
-.move-choice-btn img,
-.CPU-btn img {
-    width: 85px;
-    height: 85px;
-    margin: 2px !important;
+    .howToPlayImg {
+        width: 200px;
+        height: 90px;
+    }
+    .move-choice-btn img,
+    .CPU-btn img {
+        width: 120px;
+        height: 120px;
+    }
+    h2 { font-size: 1.5rem; }
+    p { font-size: 1.1rem; }
 }
 
-    .p-3 {
-        padding: 1.5rem !important;
-    }
-
-    h2 {
-        font-size: 1.5rem;
-    }
-
-    p {
-        font-size: 1.1rem;
-    }
-}
-
-@media (min-width: 1024px) and (max-width: 1200px) {
-    .headerImage {
-        max-width: 100vw;
-        height: 400px;
-        padding-top: 1rem;
-    }
-
-.move-choice-btn img,
-.CPU-btn img {
-    width: 120px;
-    height: 120px;
-    margin: 2px !important;
-}
-
-    .p-3 {
-        padding: 1.75rem !important;
-    }
-
-    h2 {
-        font-size: 1.75rem;
-    }
-
-    p {
-        font-size: 1.175rem;
-    }
-}
-
+/* Extra large devices (large desktops, 1200px and up) */
 @media (min-width: 1200px) {
     .headerImage {
-        max-width: 100vw;
         height: 450px;
         padding-top: 2rem;
     }
-
-    .p-3 {
-        padding: 2rem !important;
+    .howToPlayImg {
+        width: 225px;
+        height: 100px;
     }
-
-    h2 {
-        font-size: 2rem;
+    .move-choice-btn img,
+    .CPU-btn img {
+        width: 140px;
+        height: 140px;
     }
-
-    p {
-        font-size: 1.25rem;
-    }
+    h2 { font-size: 2rem; }
+    p { font-size: 1.25rem; }
 }
