Add: aria attrs + some styling in css + confetti edits to JS

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -114,6 +114,19 @@ background-color: #A66500;
     font-size: 1.5rem;
 }
 
+.greyed-out {
+    border: none;
+}
+
+.countdown-active {
+    padding: 1rem 2rem;
+    background: white;
+    border-radius: 12px;
+    font-size: 4rem;
+    font-weight: bold;
+    text-align: center;
+}
+
 canvas {
     position: fixed;
     top: 0;
